# scratch-pad

./: .gitignore  CLAUDE.md  README.md  biome.json  components.json  index.html  main.tsx  package.json  tsconfig.app.json  tsconfig.cli.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html  style.css
fixtures/: sample-meeting.json  sample-meeting.txt  sample-monologue.txt  speaker-labelled-demo.txt  unlabelled-demo.txt
landing/: .gitignore  README.md  astro.config.mjs  package.json
landing/src/components/: BrandWord.astro  Logo.astro  MindmapPlaceholder.astro
landing/src/layouts/: Base.astro
landing/src/pages/: download.astro  index.astro
landing/src/styles/: global.css
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.test.ts  index.ts
scripts/: ipc-smoke.ts
src/: index.css  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_import.rs  lib.rs  main.rs  meetings.rs  transcript_import.rs
src-tauri/src/cli_server/: auth.rs  discovery.rs  error.rs  mod.rs  routes.rs
src-tauri/src/cli_server/handlers/: app.rs  meetings.rs  mod.rs  pads.rs
src-tauri/src/network/: discovery.rs  mod.rs  protocol.rs  room.rs  store.rs  transport.rs
src/components/ai-elements/: canvas.tsx  edge.tsx
src/components/aizuchi/: AIThoughtsPanel.tsx  EventTimelineStrip.tsx  LiveTranscript.tsx  MeetingCanvas.tsx  MeetingOutline.tsx  MeetingStatusPanel.tsx  RecordingSession.tsx  aizuchi-node.tsx
src/components/palette/: Palette.tsx
src/hooks/: useCloseWindowHotkey.ts  useCommandPaletteHotkey.ts  useForceLayout.ts  useMeetingDebugSnapshot.ts  useMeetingSession.ts
src/lexical/: BlockHandlesPlugin.tsx  NoteEditor.tsx  SlashMenuPlugin.tsx  blockTypes.ts
src/lib/aizuchi/: batcher.ts  feeder.ts  graph-mutation.ts  harness.ts  meeting-notes.ts  name-generator.ts  normalize.ts  persistence.ts  prompts.ts  providers.ts  schemas.ts
src/lib/aizuchi/fixtures/: standup-transcript.ts
src/lib/cli-core/: client.test.ts  client.ts  discovery.test.ts  discovery.ts  errors.test.ts  errors.ts  index.ts  types.ts
src/routes/: __root.tsx  index.tsx  meeting.$id.tsx
