[package]
name = "aizuchi"
version = "0.1.0"
description = "Aizuchi desktop app — live mind-map meeting tool"
authors = ["Stephen Horton"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aizuchi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", features = ["macos_fsevent"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
mdns-sd = "0.11"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "time", "rt"] }
hostname = "0.4"
local-ip-address = "0.6"
cpal = "0.15"
hound = "3.5"
whisper-rs = "0.16"
# AIZ-31 — decode .mp3/.m4a/.flac for offline audio import. WAV stays on
# `hound` for the live-capture path. Pure-Rust, no native deps.
symphonia = { version = "0.5", features = ["mp3", "aac", "alac", "flac", "isomp4"] }

# IPC server (AIZ-20)
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server-graceful"] }
hex = "0.4"
subtle = "2"
getrandom = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSOperation"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
block2 = "0.6"

