[package]
name = "aizuchi"
version = "0.1.0"
description = "Aizuchi desktop app — live mind-map meeting tool"
authors = ["Stephen Horton"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aizuchi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", features = ["macos_fsevent"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
mdns-sd = "0.11"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "time", "rt"] }
hostname = "0.4"
local-ip-address = "0.6"
cpal = "0.15"
hound = "3.5"
whisper-rs = "0.16"
# AIZ-31 — decode .mp3/.m4a/.flac for offline audio import. WAV stays on
# `hound` for the live-capture path. Pure-Rust, no native deps. AIZ-37
# adds `mkv` (covers .mkv and .webm — same Matroska container) so we can
# demux browser/screen-recorder output; the Opus codec inside those
# containers is decoded by `opus-decoder` (symphonia 0.5 has no Opus
# decoder of its own).
symphonia = { version = "0.5", features = ["mp3", "aac", "alac", "flac", "isomp4", "mkv"] }
# AIZ-37 — pure-Rust Opus decoder (RFC 8251 conformant, no FFI, forbid
# unsafe). Used for `.webm`/`.mkv` audio tracks where symphonia hands us
# Opus packets but cannot decode them.
opus-decoder = "0.1"
# AIZ-38 — streaming HTTPS download for the whisper model so we can emit
# byte-level progress (replaces a blocking `curl --progress-bar` shell-out
# that hid all feedback during the ~5min first-run download). Pinned to
# 0.13 to share the version `tauri-plugin-updater` already pulls in,
# avoiding two reqwest versions in the binary.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "stream"] }

# IPC server (AIZ-20)
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server-graceful"] }
hex = "0.4"
subtle = "2"
getrandom = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSOperation", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat"] }
block2 = "0.6"

